:green_heart: fix contrast colors

--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -248,7 +248,7 @@ form legend {
 form label.top, form div {
     display: block;
     padding-top: 1rem;
-    color: #53851D;
+    /* color: #53851D; */
     font-size: 1rem;
 }
 form label.top input, form label.top select {
@@ -269,7 +269,7 @@ form label.sbs {
 }
 form input.submitBtn {
     border: none;
-    background-color: #53851D;;
+    background-color: #436320;
     color: white;
     border-radius: 1rem;
     padding: .75rem 1.5rem;
@@ -313,7 +313,7 @@ fieldset .membership {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
     grid-gap: 10px;
-    padding: 20px;;
+    padding: 20px;
     font-size: .75rem;
     text-align: center;    
 }
